--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -37,7 +37,7 @@
 
                     <div class="tag-item">
 						<span class="tag-default">
-							{{ item.count_link }}  <small>浏览</small>
+							{{ item.count_click }}  <small>浏览</small>
 						</span>
                     </div>
                 </div>
