--- a/repository/forum/templates/include/_header.html
+++ b/repository/forum/templates/include/_header.html
@@ -22,12 +22,12 @@
                         <li><a href="home-categories-articles.html">Home 3</a></li>
                         <li><a href="articles-list.html">Articles List</a></li>
                         <li><a href="faq.html">FAQs</a></li>
-                        <li><a href="#">Skins</a>
+                        <li><a href="#">撰写</a>
                             <ul class="sub-menu">
-                                <li><a href="blue-skin.html">Blue Skin</a></li>
-                                <li><a href="green-skin.html">Green Skin</a></li>
-                                <li><a href="red-skin.html">Red Skin</a></li>
-                                <li><a href="index-2.html">Default Skin</a></li>
+                                <li><a href="{% url 'forum:quiz' %}">提问题</a></li>
+{#                                <li><a href="green-skin.html">Green Skin</a></li>#}
+{#                                <li><a href="red-skin.html">Red Skin</a></li>#}
+{#                                <li><a href="index-2.html">Default Skin</a></li>#}
                             </ul>
                         </li>
                         <li><a href="#">More</a>
