--- a/repository/forum/templates/include/assets.html
+++ b/repository/forum/templates/include/assets.html
@@ -10,17 +10,13 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Knowledge Base Theme</title>
+    {% block title %}
+    {% endblock %}
+
+    {% block css %}
+    {% endblock %}
 
     <link rel="shortcut icon" href="{% static 'lib/images/favicon.png' %}"/>
-
-    <!-- Style Sheet-->
-{#    <link rel="stylesheet" href="{% static 'lib/css/style.css' %}"/>#}
-    <link rel='stylesheet' id='bootstrap-css-css' href='{% static 'lib/css/bootstrap5152.css' %}' type='text/css' media='all'/>
-    <link rel='stylesheet' id='responsive-css-css' href='{% static 'lib/css/responsive5152.css' %}' type='text/css' media='all'/>
-    <link rel='stylesheet' id='pretty-photo-css-css' href='{% static 'lib/js/prettyphoto/prettyPhotoaeb9.css' %}' type='text/css' media='all'/>
-    <link rel='stylesheet' id='main-css-css' href='{% static 'lib/css/main5152.css' %}' type='text/css' media='all'/>
-{#    <link rel='stylesheet' id='custom-css-css' href='css/custom5152.html?ver=1.0' type='text/css' media='all'/>#}
 
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
