--- a/repository/forum/templates/forum/index.html
+++ b/repository/forum/templates/forum/index.html
@@ -16,7 +16,7 @@
           type='text/css' media='all'/>
     <link rel='stylesheet' id='main-css-css' href='{% static 'lib/css/main5152.css' %}' type='text/css' media='all'/>
     {#    <link rel='stylesheet' id='custom-css-css' href='css/custom5152.html?ver=1.0' type='text/css' media='all'/>#}
-    <link rel='stylesheet' id='main-css-css' href='{% static 'forum/css/forum.css' %}' type='text/css' media='all'/>
+    <link rel='stylesheet' id='main-css-css' href='{% static 'forum/css/index.css' %}' type='text/css' media='all'/>
 
 {% endblock %}
 
