--- a/repository/base/templates/base/assets.html
+++ b/repository/base/templates/base/assets.html
@@ -13,8 +13,10 @@
     {% block title %}
     {% endblock %}
 
+
     {% block css %}
     {% endblock %}
+    <link rel='stylesheet' id='main-css-css' href='{% static 'base/css/header.css' %}' type='text/css' media='all'/>
 
     <link rel="shortcut icon" href="{% static 'lib/images/favicon.png' %}"/>
 
