--- a/repository/base/templates/base/_header.html
+++ b/repository/base/templates/base/_header.html
@@ -37,7 +37,7 @@
                                 <ul class="sub-menu">
                                     <li><a href="full-width.html">Full Width</a></li>
                                     <li><a href="elements.html">Elements</a></li>
-                                    <li><a href="page.html">Sample Page</a></li>
+                                    <li><a href="{% url 'user:logout' %}">退出</a></li>
                                 </ul>
                             </li>
                             <li><a href="contact.html">Contact</a></li>
