--- a/repository/base/templates/base/_footer.html
+++ b/repository/base/templates/base/_footer.html
@@ -58,8 +58,7 @@
             <div class="row">
                 <div class="span6">
                     <p class="copyright">
-                        Copyright © 2013. All Rights Reserved by KnowledgeBase.Collect from <a
-                            href="http://www.cssmoban.com/" title="网页模板" target="_blank">网页模板</a>
+                        Copyright © 2013. All Rights Reserved by Repository.
                     </p>
                 </div>
                 <div class="span6">
