实现密码，屏蔽第三方登录

--- a/repository/repository/apps/user/templates/registration/password_reset_confirm.html
+++ b/repository/repository/apps/user/templates/registration/password_reset_confirm.html
@@ -1,55 +1,70 @@
+{% extends "base/base.html" %}
 {% load i18n %}
-
 {% load staticfiles %}
 
-{% block head %}
-  <link rel="stylesheet" href=" {%static 'user/css/password_reset.css' %}">
-  <link href=" {%static 'user/css/bootstrap.min.css' %}" rel="stylesheet">
+
+{% block title %}
+    <title>重置密码</title>
+{% endblock %}
+
+{% block css %}
+    <!-- Style Sheet-->
+    <link rel='stylesheet' id='bootstrap-css-css' href='{% static 'lib/css/bootstrap5152.css' %}' type='text/css'
+          media='all'/>
+    <link rel='stylesheet' id='responsive-css-css' href='{% static 'lib/css/responsive5152.css' %}' type='text/css'
+          media='all'/>
+    <link rel='stylesheet' id='pretty-photo-css-css' href='{% static 'lib/js/prettyphoto/prettyPhotoaeb9.css' %}'
+          type='text/css' media='all'/>
+    <link rel='stylesheet' id='main-css-css' href='{% static 'lib/css/main5152.css' %}' type='text/css' media='all'/>
+    <link rel='stylesheet' id='main-css-css' href='{% static 'base/css/style.css' %}' type='text/css' media='all'/>
+
+{% endblock %}
+
+{% block container %}
+
+    <div class="container-box">
+        <div class="row">
+            <div class="panel-heading">
+                <h3 class="panel-title"><strong>密码重置</strong></h3>
+            </div>
+
+            <p class="error-text">
+                {% if messages %}
+                    {% for message in messages %}
+                        <p class="username-error"><strong>* {{ message }}</strong></p>
+                    {% endfor %}
+                {% endif %}
+
+            {% if form.errors %}
+                <p class="username-error"><strong>* 你的用户名或密码输入错误</strong></p>
+            {% endif %}
+            </p>
+
+            <form action="{% url 'user:reset_pwd' %}" method="post">
+                {% csrf_token %}
+
+                <div class="form-group ">
+                    <input class="form-control" maxlength="50" name="user" required
+                           placeholder="请输入您的用户名或邮箱" type="text"/>
+                </div>
+
+                <div class="form-group ">
+                    <input class="form-control" maxlength="50" name="password" required
+                           placeholder="请输入您的密码" type="password"/>
+                </div>
+                <div class="form-group ">
+                    <input class="form-control" maxlength="50" name="password_" required
+                           placeholder="请再次输入您的密码" type="password"/>
+                </div>
+                <button type="submit" class="btn btn-default">修改密码</button>
+            </form>
+
+        </div>
+    </div>
+
 {% endblock %}
 
 
-{% block mainbody %}
-
-
-
-<div class="container">
-
-  <div class="panel panel-default panel-single" style="max-width: 500px;">
-    <div class="panel-heading">
-      <h4 class="form-signin-heading">{{ title }}</h4>
-    </div>
-
-    {% if validlink %}
-      <form action="" method="post">{% csrf_token %}
-
-        <div class="panel-body">
-            {{ form.new_password1.errors }}
-           <div class="form-group ">
-                <label for="">新密码</label>
-                <input class="form-control"  maxlength="50" name="new_password1" placeholder="请输入您的密码" type="password" />
-           </div>
-                    {{ form.new_password2.errors }}
-           <div class="form-group ">
-                <label for="">确认密码</label>
-                <input class="form-control"  maxlength="50" name="new_password2" placeholder="请输入您的密码" type="password" />
-           </div>
-
-        </div>
-          <div align="center">
-            <button type="submit" class="btn btn-default">修改密码</button>
-          </div>
-
-      </form>
-    {% else %}
-
-    <p class="panel-body">{% trans "The password reset link was invalid, possibly because it has already been used.  Please request a new password reset." %}</p>
-
-    {% endif %}
-  </div>
-
-</div>
-
-
-
-
+{% block footer %}
+    {% include 'base/_footer.html' %}
 {% endblock %}
