--- a/repository/repository/apps/user/templates/registration/password_reset_done.html
+++ b/repository/repository/apps/user/templates/registration/password_reset_done.html
@@ -1,34 +1,45 @@
+{% extends "base/base.html" %}
 {% load i18n %}
-
 {% load staticfiles %}
 
-{% block head %}
-  <link rel="stylesheet" href=" {%static 'user/css/password_reset.css' %}">
-  <link href=" {%static 'user/css/bootstrap.min.css' %}" rel="stylesheet">
+
+{% block title %}
+    <title>邮件发送成功</title>
 {% endblock %}
 
-{% block mainbody %}
-
-<div class="container">
-
-  <div class="panel panel-default panel-single" style="max-width: 500px;">
-    <div class="panel-heading">
-      <h3 class="form-signin-heading">{% trans 'Password reset successful' %}</h3>
-    </div>
-    <div class="panel-body">
-        <p class="text-success" >{% trans "We've emailed you instructions for setting your password, if an account exists with the email you entered. You should receive them shortly." %}</p>
-
-        <p class="text-success" >{% trans "If you don't receive an email, please make sure you've entered the address you registered with, and check your spam folder." %}</p>
-
-    </div>
-    <!--<div class="panel-heading">-->
-        <!--<a href="{% url 'django.contrib.auth.views.login' %}" ><h4 class="form-signin-heading">点击跳转,回到登录页面</h4></a>-->
-    <!--</div>-->
-
-  </div>
-
-</div> <!-- /container -->
-
-
+{% block css %}
+    <!-- Style Sheet-->
+    <link rel='stylesheet' id='bootstrap-css-css' href='{% static 'lib/css/bootstrap5152.css' %}' type='text/css'
+          media='all'/>
+    <link rel='stylesheet' id='responsive-css-css' href='{% static 'lib/css/responsive5152.css' %}' type='text/css'
+          media='all'/>
+    <link rel='stylesheet' id='pretty-photo-css-css' href='{% static 'lib/js/prettyphoto/prettyPhotoaeb9.css' %}'
+          type='text/css' media='all'/>
+    <link rel='stylesheet' id='main-css-css' href='{% static 'lib/css/main5152.css' %}' type='text/css' media='all'/>
+    <link rel='stylesheet' id='main-css-css' href='{% static 'base/css/style.css' %}' type='text/css' media='all'/>
 
 {% endblock %}
+
+{% block container %}
+
+    <div class="container-box">
+        <div class="row">
+            <div class="panel-heading">
+                <h3 class="form-signin-heading">{% trans 'Password reset successful' %}</h3>
+            </div>
+            <div class="panel-body">
+                <p class="text-success">{% trans "We've emailed you instructions for setting your password, if an account exists with the email you entered. You should receive them shortly." %}</p>
+
+                <p class="text-success">{% trans "If you don't receive an email, please make sure you've entered the address you registered with, and check your spam folder." %}</p>
+
+            </div>
+
+        </div>
+    </div>
+
+{% endblock %}
+
+{% block footer %}
+    {% include 'base/_footer.html' %}
+{% endblock %}
+
