--- a/repository/repository/apps/user/templates/registration/password_reset_form.html
+++ b/repository/repository/apps/user/templates/registration/password_reset_form.html
@@ -1,36 +1,65 @@
-{% extends "partial/base.html" %}
-
+{% extends "base/base.html" %}
 {% load staticfiles %}
 
-{% block head %}
-  <link rel="stylesheet" href=" {%static 'user/css/style.css' %}">
+{% block title %}
+    <title>邮件重置密码</title>
 {% endblock %}
 
-{% block mainbody %}
+{% block css %}
+    <!-- Style Sheet-->
+    <link rel='stylesheet' id='bootstrap-css-css' href='{% static 'lib/css/bootstrap5152.css' %}' type='text/css'
+          media='all'/>
+    <link rel='stylesheet' id='responsive-css-css' href='{% static 'lib/css/responsive5152.css' %}' type='text/css'
+          media='all'/>
+    <link rel='stylesheet' id='pretty-photo-css-css' href='{% static 'lib/js/prettyphoto/prettyPhotoaeb9.css' %}'
+          type='text/css' media='all'/>
+    <link rel='stylesheet' id='main-css-css' href='{% static 'lib/css/main5152.css' %}' type='text/css' media='all'/>
+    <link rel='stylesheet' id='main-css-css' href='{% static 'base/css/style.css' %}' type='text/css' media='all'/>
 
-<div class="container">
-  
-  <div class="password-reset center-block">
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <h3 class="panel-title"><strong>密码重置</strong></h3>
-      </div>
-      <div class="panel-body">
-        
-        <form action="" method="post">
-            {% csrf_token %}
-          {{ form.email.errors }}
-          <div class="form-group ">
-            <label for="">邮箱</label>
-              <!--{{ form.email }}-->
-            <input class="form-control" id="id_email" maxlength="50" name="email" placeholder="请输入您注册的邮箱" type="text" />
-          </div>
-          <button type="submit" class="btn btn-default">发送重置邮件</button>
-        </form>
+{% endblock %}
 
 
-      </div>
-    </div>
-  </div>
-</div>
+{% block container %}
+
+{#    <div class="search-area-wrapper">#}
+{#        <div class="search-area container">#}
+
+            <div class="container-box">
+                <div class="row">
+                    <div class="panel-heading">
+                        <h3 class="panel-title"><strong>密码重置</strong></h3>
+                    </div>
+
+                    <p class="error-text">
+                        {% if messages %}
+                            {% for message in messages %}
+                                <p class="username-error"><strong>* {{ message }}</strong></p>
+                            {% endfor %}
+                        {% endif %}
+
+                    {% if form.errors %}
+                        <p class="username-error"><strong>* 你的用户名或密码输入错误</strong></p>
+                    {% endif %}
+                    </p>
+
+                    <form action="" method="post">
+                        {% csrf_token %}
+
+                        <div class="form-group ">
+                            <input class="form-control" maxlength="50" name="email" required
+                                   placeholder="请输入您注册的邮箱" type="email"/>
+                        </div>
+                        <button type="submit" class="btn btn-default">发送重置邮件</button>
+                    </form>
+
+                </div>
+            </div>
+{#        </div>#}
+{#    </div>#}
+
+{% endblock %}
+
+
+{% block footer %}
+    {% include 'base/_footer.html' %}
 {% endblock %}
