--- a/repository/repository/apps/forum/templates/forum/edit.html
+++ b/repository/repository/apps/forum/templates/forum/edit.html
@@ -14,13 +14,13 @@
     <link rel="stylesheet" href="https://sf-static.b0.upaiyun.com/v-580f252a/global/css/responsive.css"/>
     {#    <link rel="stylesheet" href="//cdn.jsdelivr.net/editor/0.1.0/editor.css">#}
 
-    <link rel='stylesheet' id='main-css-css' href='{% static '../../../base/static/editor/css/editormd.min.css' %}' type='text/css' media='all'/>
+    <link rel='stylesheet' id='main-css-css' href='{% static 'editor/css/editormd.min.css' %}' type='text/css' media='all'/>
 
-    <link rel='stylesheet' id='responsive-css-css' href='{% static '../../../base/static/lib/css/responsive5152.css' %}' type='text/css'
+    <link rel='stylesheet' id='responsive-css-css' href='{% static 'lib/css/responsive5152.css' %}' type='text/css'
           media='all'/>
-    <link rel='stylesheet' id='pretty-photo-css-css' href='{% static '../../../base/static/lib/js/prettyphoto/prettyPhotoaeb9.css' %}'
+    <link rel='stylesheet' id='pretty-photo-css-css' href='{% static 'lib/js/prettyphoto/prettyPhotoaeb9.css' %}'
           type='text/css' media='all'/>
-    <link rel='stylesheet' id='main-css-css' href='{% static '../../../base/static/lib/css/main5152.css' %}' type='text/css' media='all'/>
+    <link rel='stylesheet' id='main-css-css' href='{% static 'lib/css/main5152.css' %}' type='text/css' media='all'/>
     <link rel='stylesheet' id='main-css-css' href='{% static 'forum/css/forum.css' %}' type='text/css' media='all'/>
 
 
@@ -704,7 +704,7 @@
 
 {% block js %}
 
-    <script type='text/javascript' src='{% static '../../../base/static/editor/js/editormd.min.js' %}'></script>
+    <script type='text/javascript' src='{% static 'editor/js/editormd.min.js' %}'></script>
     <script type="text/javascript">
         var testEditor;
 
