只开放博客，论坛暂不开放

--- a/repository/repository/apps/base/static/base/css/header.css
+++ b/repository/repository/apps/base/static/base/css/header.css
@@ -14,3 +14,7 @@
     color: #009a61 !important;
     text-decoration: none !important;
 }
+
+/*.logo-container img {*/
+    /*margin-left: 90px !important;*/
+/*}*/
