--- a/repository/repository/apps/base/templates/base/_header.html
+++ b/repository/repository/apps/base/templates/base/_header.html
@@ -10,7 +10,7 @@
                     <img src="{% static 'lib/images/logo.png' %}" alt="Knowledge Base Theme">
                 </a>
                 {#                <span class="tag-line">Premium WordPress Theme</span>#}
-                <span class="tag-line"><a href="{% url 'forum:index' %}">问答</a></span>
+{#                <span class="tag-line"><a href="{% url 'forum:index' %}">问答</a></span>#}
 
             </div>
 
@@ -20,14 +20,15 @@
                 <div class="menu-top-menu-container">
                     {% if user.is_authenticated %}
                         <ul id="menu-top-menu" class="clearfix">
-                            <li class="current-menu-item"><a href="index-2.html">Home</a></li>
-                            <li><a href="home-categories-description.html">Home 2</a></li>
+{#                            <li class="current-menu-item"><a href="index-2.html">Home</a></li>#}
+{#                            <li><a href="home-categories-description.html">Home 2</a></li>#}
 
-                            <li><a href="articles-list.html">Articles List</a></li>
-                            <li><a href="faq.html">FAQs</a></li>
+{#                            <li><a href="articles-list.html">Articles List</a></li>#}
+{#                            <li><a href="faq.html">FAQs</a></li>#}
                             <li><a href="#">撰写</a>
                                 <ul class="sub-menu">
                                     <li><a href="{% url 'forum:quiz' %}">提问题</a></li>
+                                    <li><a href="{% url 'blog:quiz' %}">写文章</a></li>
                                     {#                                <li><a href="green-skin.html">Green Skin</a></li>#}
                                     {#                                <li><a href="red-skin.html">Red Skin</a></li>#}
                                     {#                                <li><a href="index-2.html">Default Skin</a></li>#}
@@ -40,7 +41,7 @@
                                     <li><a href="{% url 'user:logout' %}">退出</a></li>
                                 </ul>
                             </li>
-                            <li><a href="contact.html">Contact</a></li>
+{#                            <li><a href="contact.html">Contact</a></li>#}
                         </ul>
                     {% else %}
                         <ul id="menu-top-menu" class="clearfix">
